# cueward

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/adapter-macos/: Cargo.toml
crates/adapter-macos/scripts/: ocr.swift
crates/adapter-macos/src/: applescript.rs  bookmarks.rs  calendar.rs  calendar_eventkit.rs  clipboard.rs  error.rs  lib.rs  messages.rs  notes.rs  ocr.rs  plan.rs  quick_notes.rs  reddit.rs  reminders.rs  safari.rs  safari_guard.rs  scan_state.rs  screenshot.rs  send.rs  stickies.rs  voice_memos.rs
crates/adapter-macos/src/bookmarks/: plist_io.rs  tree_ops.rs
crates/adapter-macos/src/doctor/: mod.rs  runner.rs  types.rs
crates/adapter-macos/src/doctor/automation/: apps.rs  classify.rs  mod.rs  safari_live.rs
crates/adapter-macos/src/doctor/filesystem/: messages.rs  mod.rs  notes.rs  safari.rs  shared.rs  targets.rs  voice_memos.rs
crates/adapter-macos/src/notes/: capture.rs  crud.rs  db.rs  mod.rs  notify.rs
crates/adapter-macos/src/notes/attachments/: audio.rs  drawing.rs  file_backed.rs  image.rs  map.rs  mod.rs  ocr_support.rs  tests.rs  web_preview.rs
crates/adapter-macos/src/notes/db/: audio.rs  drawing.rs  file_backed.rs  mod.rs  test_support.rs  web_preview.rs
crates/adapter-macos/src/reddit/: mod.rs  scan.rs  tests.rs
crates/adapter-macos/src/reminders/: crud.rs  eventkit.rs
crates/adapter-macos/src/safari/: core.rs  core_tests.rs  history.rs  mod.rs  script.rs  script_tests.rs  types.rs
crates/adapter-macos/src/safari/ai/: grok.rs  mod.rs
crates/adapter-macos/src/safari/ai/chatgpt/: conversations.rs  images.rs  mod.rs  prompt.rs
crates/adapter-macos/src/safari/ai/gemini/: conversations.rs  deep_research.rs  media.rs  mod.rs  prompt.rs
crates/adapter-macos/src/safari/social/: mod.rs  threads.rs  x.rs
crates/adapter-macos/src/screenshot/: capture.rs  mod.rs  tests.rs  windows.rs
crates/adapter-macos/src/shortcuts/: actions.rs  compiler.rs  db.rs  mod.rs  tests.rs  types.rs
crates/adapter-macos/src/shortcuts/compiler/: decode.rs  encode.rs  mod.rs
crates/adapter-macos/src/shortcuts/db/: mod.rs  payloads.rs  queries.rs  relations.rs
crates/adapter-macos/src/shortcuts/tests/: compiler_tests.rs  db_tests.rs  mod.rs
crates/adapter-macos/src/stickies/: color.rs  display.rs  geometry.rs  mod.rs  state.rs  tests.rs
crates/adapter-windows/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: calendar.rs  calendar_tests.rs  capture.rs  clipboard.rs  doctor.rs  doctor_tests.rs  help_tests.rs  helpers.rs  mod.rs  notes.rs  notes_tests.rs  ocr.rs  quick_notes.rs  reddit.rs  reddit_tests.rs  reminders.rs  reminders_tests.rs  safari.rs  safari_ai.rs  safari_ai_tests.rs  safari_bookmarks.rs  safari_bookmarks_tests.rs  safari_tests.rs  screenshot.rs  screenshot_tests.rs  search.rs  send.rs  shortcuts.rs  shortcuts_tests.rs  stickies.rs  stickies_tests.rs  triage.rs  voice_memos.rs  voice_memos_tests.rs
crates/cli/src/commands/safari_ai/: chatgpt.rs  gemini.rs  grok.rs  mod.rs  threads.rs  x.rs
crates/cli/src/commands/shortcuts/: args.rs  dispatch.rs  io.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: adapter.rs  cue.rs  inbox.rs  index.rs  lib.rs  shortcuts.rs  state.rs  tagger.rs
docs/: decisions.md  lessons.md  todo.md
docs/architecture/: data-flow.md
docs/plans/: 2026-04-11-calendar-screenshot-clipboard.md  2026-04-12-chatgpt-save-images-stability.md  2026-04-12-scroll-read-pipeline.md  2026-04-13-notes-foundation-refactor.md  2026-04-13-notes-kind-unresolved.md  2026-04-13-notes-web-preview.md  2026-04-13-reddit-json-api.md  2026-04-13-safari-bookmarks-crud.md  2026-04-13-smart-polling-state-layer.md  2026-04-14-notes-map-location.md  2026-04-15-screenshot-window-capture.md  2026-04-15-stickies-crud.md  2026-04-15-stickies-display-color-geometry.md  2026-04-15-threads-smart-polling.md  2026-04-15-voice-memos-read.md  2026-04-16-notes-drawing-attachments.md  2026-04-19-shortcuts-cli.md
docs/pocs/: README.md  auto_organize.py  auto_tagger.py  cleanup_tags.py  create_test_note.py  ecosystem_eval.py  flashtext_poc.rs  messages_tool.swift  move_note_poc.py  notch_island.swift  notes_tool.py  pdf_ocr.swift  read_folder_poc.py  read_notes_poc.py  vision_ocr.swift
docs/pocs/benchmark_poc/: Cargo.toml
docs/specs/: 2026-04-11-calendar-screenshot-clipboard.md  2026-04-12-safari-automation-guard.md  2026-04-13-notes-attachment-pipeline-refactor.md  2026-04-13-reddit-json-api.md  2026-04-13-safari-bookmarks-crud.md  2026-04-13-smart-polling-state-layer.md  2026-04-15-screenshot-window-capture.md  2026-04-15-stickies-crud.md  2026-04-15-stickies-display-color-geometry.md  2026-04-15-threads-smart-polling.md  2026-04-15-voice-memos-read.md  2026-04-16-notes-drawing-attachments.md  2026-04-19-shortcuts-cli-design.md
skills/cueward-agent/: SKILL.md
skills/cueward-agent/references/: apple-apps.md  retrieval.md  safari.md  shortcuts.md
