[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/cli",
    "crates/adapter-macos",
    "crates/adapter-windows",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/HCYT/cueward"
homepage = "https://github.com/HCYT/cueward"
readme = "README.md"
rust-version = "1.85"

[workspace.dependencies]
cueward-core = { version = "0.3.0", path = "crates/core" }
cueward-adapter-macos = { version = "0.3.0", path = "crates/adapter-macos" }
cueward-adapter-windows = { version = "0.3.0", path = "crates/adapter-windows" }
