[package]
name = "cueward-adapter-macos"
version.workspace = true
edition.workspace = true

[dependencies]
cueward-core = { path = "../core" }
rusqlite = { version = "0.35", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
