[package]
name = "cueward-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cueward"
path = "src/main.rs"

[dependencies]
cueward-core = { path = "../core" }
cueward-adapter-macos = { path = "../adapter-macos" }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
serde_json = "1"
