[package]
name = "cueward-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "CLI for capturing and searching local knowledge from macOS native sources."

[[bin]]
name = "cueward"
path = "src/main.rs"

[dependencies]
cueward-core = { version = "0.1.0", path = "../core" }
cueward-adapter-macos = { version = "0.1.0", path = "../adapter-macos" }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
serde_json = "1"
