[package]
name = "cueward-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "CLI for capturing and searching local knowledge from macOS native sources."

[[bin]]
name = "cueward"
path = "src/main.rs"

[dependencies]
cueward-core = { workspace = true }
cueward-adapter-macos = { workspace = true }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
serde_json = "1"
serde_yaml = "0.9"
