[package]
name = "cueward-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Core types, indexing, and tagging engine for the Cueward knowledge capture toolkit."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tantivy = "0.22"
aho-corasick = "1"
toml = "0.8"
